1-VPC.tf
# # Configure the AWS Provider
# provider "aws" {
#   region = "eu-west-2"
# }

# # Create a VPC
# resource "aws_vpc" "TokyoMidtownLondon" {
#   cidr_block = "10.126.0.0/16"
               
# tags = {
#     Name    = "TokyoMidtownLondon"
#     Service = "Medical Center"
#     Owner   = "TokyoMidtownMedicalCenter"
#     Country  = "United Kingdom/Japan"
#   }
# }
