7-launch template.tf
resource "aws_launch_template" "London" {
  name_prefix   = "London"
  image_id      = "ami-1a2b3c"
  instance_type = "t2.micro"
}
